src/objects/Lender_Center_Client_Id__c.object
<CustomObject>
    <description>The client ID to that needs to be passed to the lender API depending on which center is sending the request.</description>
    <fields>
        <fullName>Center__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The center associated with the Client ID</description>
        <label>Center Information</label>
        <referenceTo>Center_Information__c</referenceTo>
        <relationshipLabel>Lender Center Client Ids</relationshipLabel>
        <relationshipName>Lender_Center_Client_Ids</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Id__c</fullName>
        <description>The client ID to be passed to the Lender API</description>
        <label>Client Id</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lender__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lender associated with the Client ID</description>
        <label>Lender</label>
        <referenceTo>Lender__c</referenceTo>
        <relationshipLabel>Lender Center Client Ids</relationshipLabel>
        <relationshipName>Lender_Center_Client_Ids</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Lender Center Client Id</label>
    <nameField>
        <label>Lender Center Client Id Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lender Center Client Ids</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>